Fixed Result page shelf card alignment

--- a/src/styles/_nt-layouts.scss
+++ b/src/styles/_nt-layouts.scss
@@ -7858,6 +7858,7 @@
   padding: calc(var(--nt-vh)*1.5) calc(var(--nt-vw)*0.8);
   box-sizing: border-box;
   cursor: pointer;
+  justify-content: center;
 }
 
 .nt-result.res-shelf .sprod .s-img {
